--- a/index.html
+++ b/index.html
@@ -126,8 +126,36 @@
             <a href="#!" class="btn header__action--sign-up">Sign Up</a>
           </div>
         </div>
-        <!-- khoi ben duoi -->
-        <div class="header-bottom"></div>
+        <!-- khoi Hero -->
+        <section class="hero">
+          <!-- hero left -->
+          <section class="hero__content">
+            <h1 class="hero__heading">Exceptional dental care for all ages.</h1>
+            <p class="hero__desc">
+              Exceptional dental care for all ages. Your great smile begins with
+              a great dentist.
+            </p>
+            <div class="hero__row">
+              <a href="#!" class="btn">Book Online</a>
+              <span class="hero__phone">or call (123) 456-7890</span>
+            </div>
+          </section>
+          <!-- hero right -->
+          <div class="hero__media">
+            <figure class="hero__images">
+              <img
+                src="./assets/image/img1.jpg"
+                alt=""
+                class="hero__img hero__img--large"
+              />
+              <img
+                src="./assets/image/img2.jpg"
+                alt=""
+                class="hero__img hero__img--small"
+              />
+            </figure>
+          </div>
+        </section>
       </div>
     </header>
   </body>
