--- a/index.html
+++ b/index.html
@@ -312,6 +312,37 @@
           </div>
         </div>
       </section>
+      <!-- about -->
+      <section class="about">
+        <div class="container">
+          <div class="about__row">
+            <!-- about left -->
+            <div class="about__media">
+              <figure class="about__img">
+                <img
+                  src="./assets/image/caroline-lm-8BkF0sTC6Uo-unsplash.jpg"
+                  alt=""
+                  class="about__img--big"
+                />
+                <img
+                  src="./assets/image/Rectangle_4449.jpg"
+                  alt=""
+                  class="about__img--small"
+                />
+              </figure>
+            </div>
+            <!-- about right -->
+            <section class="about-content">
+              <h2 class="section-heading">Take back your smile with shine.</h2>
+              <p class="section-desc">
+                If you’re missing multiple teeth due to decay, injury, or the
+                natural aging process, dentures might be the perfect solution.
+              </p>
+              <a href="#!" class="btn about-content__btn">Learn More</a>
+            </section>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
