--- a/index.html
+++ b/index.html
@@ -440,6 +440,47 @@
           </div>
         </div>
       </section>
+      <!-- install mobile -->
+      <section class="install">
+        <div class="container">
+          <div class="install__inner">
+            <!-- install left -->
+            <figure>
+              <img
+                src="./assets/image/Rectangle.png"
+                alt="mobile"
+                class="install__img"
+              />
+            </figure>
+            <!-- install right -->
+            <section class="install__content">
+              <h2 class="section-heading install__heading">
+                Take back your smile with dentures
+              </h2>
+              <p class="section-desc install__desc">
+                If you’re missing multiple teeth due to decay, injury, or the
+                natural aging process, dentures might be the perfect solution.
+              </p>
+              <div class="install__row">
+                <a href="#!">
+                  <img
+                    src="./assets/icon/Google_Play_outline_badge.svg"
+                    alt="Google_Play"
+                    class="install__btn-img"
+                  />
+                </a>
+                <a href="#!">
+                  <img
+                    src="./assets/icon/App_Store_outline_badge.svg"
+                    alt="App_Store"
+                    class="install__btn-img"
+                  />
+                </a>
+              </div>
+            </section>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
